--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               App-pfswatch
-version:            0.03
+version:            0.04
 abstract:           A simple utility that detects changes in a filesystem and run given command.
 author:  []
 license:            perl
@@ -14,6 +14,9 @@ requires:
     ExtUtils::MakeMaker:  6.31
     Filesys::Notify::Simple:  0.07
     Regexp::Assemble:     0.34
+resources:
+    license:     http://dev.perl.org/licenses/
+    repository:  git://github.com/ysasaki/p5-app-pfswatch.git
 no_index:
     directory:
         - t
