--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               App-pfswatch
-version:            0.04
+version:            0.05
 abstract:           A simple utility that detects changes in a filesystem and run given command.
 author:  []
 license:            perl
@@ -15,6 +15,7 @@ requires:
     Filesys::Notify::Simple:  0.07
     Regexp::Assemble:     0.34
 resources:
+    bugtracker:  https://github.com/ysasaki/p5-app-pfswatch/issues
     license:     http://dev.perl.org/licenses/
     repository:  git://github.com/ysasaki/p5-app-pfswatch.git
 no_index:
