--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,18 @@
 --- #YAML:1.0
 name:               App-pfswatch
-version:            0.05
+version:            0.06
 abstract:           A simple utility that detects changes in a filesystem and run given command.
-author:  []
+author:
+    - Yoshihiro Sasaki <ysasaki at cpan.org>
 license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
     ExtUtils::Install:    1.46
     ExtUtils::MakeMaker:  6.31
+    Test::Simple:         0.96
+requires:
     Filesys::Notify::Simple:  0.07
     Regexp::Assemble:     0.34
 resources:
