--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,28 @@
---- #YAML:1.0
-name:               App-pfswatch
-version:            0.06
-abstract:           A simple utility that detects changes in a filesystem and run given command.
+---
+abstract: 'A simple utility that detects changes in a filesystem and run given command.'
 author:
-    - Yoshihiro Sasaki <ysasaki at cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Yoshihiro Sasaki <ysasaki at cpan.org>'
 build_requires:
-    ExtUtils::Install:    1.46
-    ExtUtils::MakeMaker:  6.31
-    Test::Simple:         0.96
-requires:
-    Filesys::Notify::Simple:  0.07
-    Regexp::Assemble:     0.34
-resources:
-    bugtracker:  https://github.com/ysasaki/p5-app-pfswatch/issues
-    license:     http://dev.perl.org/licenses/
-    repository:  git://github.com/ysasaki/p5-app-pfswatch.git
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::Install: 1.46
+  ExtUtils::MakeMaker: 6.31
+  Test::Simple: 0.96
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: App-pfswatch
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Filesys::Notify::Simple: 0.07
+resources:
+  bugtracker: https://github.com/ysasaki/p5-app-pfswatch/issues
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/ysasaki/p5-app-pfswatch.git
+version: 0.07
