--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,15 @@
 ---
-abstract: 'A simple utility that detects changes in a filesystem and run given command.'
+abstract: 'a simple utility that detects changes in a filesystem and run given command'
 author:
   - 'Yoshihiro Sasaki <ysasaki at cpan.org>'
 build_requires:
-  ExtUtils::Install: 1.46
-  ExtUtils::MakeMaker: 6.31
-  Test::Simple: 0.96
+  Test::More: 0.98
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.6.7, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,11 +18,24 @@ name: App-pfswatch
 no_index:
   directory:
     - t
+    - xt
     - inc
+    - share
+    - eg
+    - examples
+    - author
+provides:
+  App::pfswatch:
+    file: lib/App/pfswatch.pm
+    version: 0.08
 requires:
-  Filesys::Notify::Simple: 0.07
+  Filesys::Notify::Simple: 0.12
+  perl: 5.008001
 resources:
   bugtracker: https://github.com/ysasaki/p5-app-pfswatch/issues
-  license: http://dev.perl.org/licenses/
+  homepage: https://github.com/ysasaki/p5-app-pfswatch
   repository: git://github.com/ysasaki/p5-app-pfswatch.git
-version: 0.07
+version: 0.08
+x_contributors:
+  - 'ysasaki <ysasaki@idac.co.jp>'
+  - 'ysasaki <aloelight@gmail.com>'
